--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,25 +1,2 @@
-add_subdirectory(day1)
-add_subdirectory(day2)
-add_subdirectory(day3)
-add_subdirectory(day4)
-add_subdirectory(day5)
-add_subdirectory(day6)
-add_subdirectory(day7)
-add_subdirectory(day8)
-add_subdirectory(day9)
-add_subdirectory(day10)
-add_subdirectory(day11)
-add_subdirectory(day12)
-add_subdirectory(day13)
-add_subdirectory(day14)
-add_subdirectory(day15)
-add_subdirectory(day16)
-add_subdirectory(day17)
-add_subdirectory(day18)
-add_subdirectory(day19)
-add_subdirectory(day20)
-add_subdirectory(day21)
-add_subdirectory(day22)
-add_subdirectory(day23)
-add_subdirectory(day24)
-add_subdirectory(day25)
+add_subdirectory(2022)
+add_subdirectory(2023)
