rename target, fix compile error. (2022 day 24 not done)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
-project(advent_of_code_2022)
+cmake_minimum_required(VERSION 3.28 FATAL_ERROR)
+project(advent_of_code)
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_BINARY_DIR}")
 include(ProjectOption)
@@ -13,15 +13,14 @@ configure_project_option(
   IPO
     DISABLE_FOR_CONFIG Debug Coverage
   PROJ_TARGET
-    TARGET advent_of_code_2022
+    TARGET advent_of_code
 )
 # cmake-format: on
 
 find_package(Microsoft.GSL CONFIG REQUIRED)
-find_package(Boost REQUIRED)
 find_package(ctre REQUIRED)
 find_package(range-v3 REQUIRED)
 find_package(fmt REQUIRED)
 
-target_link_libraries(advent_of_code_2022 INTERFACE range-v3::range-v3 Microsoft.GSL::GSL)
+target_link_libraries(advent_of_code INTERFACE range-v3::range-v3 Microsoft.GSL::GSL)
 add_subdirectory(src)
